# lue_qa

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
configuration/eejit/: README.md  cluster.json  config.yaml  platform.json
configuration/eejit/cluster_node/: partition_shape.json  scalability.json
configuration/eejit/core_cluster_node/: partition_shape.json  scalability.json
configuration/eejit/core_numa_node/: partition_shape.json  scalability.json
configuration/eejit/numa_node/: partition_shape.json  scalability.json
configuration/eejit/thread_cluster_node/: scalability.json
configuration/eejit/thread_numa_node/: partition_shape.json  scalability.json
configuration/gransasso/: config.yaml
configuration/gransasso/core_numa_node/: partition_shape.json  scalability.json
configuration/gransasso/thread_numa_node/: partition_shape.json  scalability.json  strong_scalability.json
configuration/orkney/: README.md  platform.json
configuration/orkney/core_numa_node/: partition_shape.json
configuration/snellius/: platform.json
configuration/snellius/cluster_node/: partition_shape.json  scalability.json
configuration/snowdon/: config.yaml  platform.json
configuration/spider/: README.md  platform.json
configuration/velocity/: cluster.json  config.yaml  platform.json
environment/configuration/: conda_environment.yml  requirements.txt
environment/script/: hello_world.py
experiment/configuration/: Snakefile  decreasing_order.py  go.sh  integrate.py
source/: export_results.py
(+74 files in other folders)
